--- a/css/splash.css
+++ b/css/splash.css
@@ -128,7 +128,7 @@ p {
 
 .header nav a p, .header_bottom nav a p {
  	text-decoration: none;
-	font-family:'helvetica_neueregular', sans-serif; 
+	font-family:'Helvetica-Neue-Light-Ext', sans-serif; 
  	font-size:12px;	
 	line-height:12px;
     color: #000;
@@ -220,7 +220,7 @@ p {
 .kzkVSS.kzkVSS.kzkVSS.kzkVSS.kzkVSS.kzkVSS .ql-container p {
  	text-decoration: none;
 	text-transform:uppercase!important;
-	font-family:'helvetica_neueregular', sans-serif!important;	 
+	font-family:'Helvetica-Neue-Light', sans-serif!important;	 
  	font-size:12px!important;	
 	line-height:12px;
     color: #000!important;
@@ -248,7 +248,7 @@ p {
 }
 
 .etaOCU.etaOCU.etaOCU.etaOCU.etaOCU.etaOCU, input::placeholder {
-	font-family:'Times Now-Light'!important;
+	font-family:'Times-Now-Light'!important;
 	height:110px!important;
 	text-align: center !important;
 	background-color: rgb(255,255,255,0) !important;
@@ -274,7 +274,7 @@ p {
 }
 
 .jEnZGi.jEnZGi.jEnZGi.jEnZGi.jEnZGi.jEnZGi {
-	font-family:'Times Now-Light'!important;
+	font-family:'Times-Now-Light'!important;
 	height:110px!important;
 	text-align: center !important;
 	background-color: rgb(255,255,255,0) !important;
@@ -323,7 +323,7 @@ p {
 .kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1 .ql-editor span {
  	text-decoration: none;
 	text-transform:uppercase!important;
-	font-family:'helvetica_neueregular', sans-serif; 
+	font-family:'Helvetica-Neue-Light-Ext', sans-serif; 
  	font-size:12px!important;	
 	line-height:18px;
     color: #000;
@@ -433,13 +433,13 @@ body.about {
 }
 
 .about-copy p {
-	font-family:'Times Now-Light';
-	font-size:30px;
+	font-family:'HelveticaNeue';
+	font-size:22px;
 	line-height:30px;
 	color:#000;
 	letter-spacing:0px;
 	text-align:center;
-	-webkit-text-stroke: 1.5px black;	
+	-webkit-text-stroke: 0.8px black;	
 	transform:scale(0.7,1); 
 	-webkit-transform:scale(0.7,1); 
 	-moz-transform:scale(0.7,1); 
@@ -450,9 +450,9 @@ body.about {
 .about-copy p.about-sans {
  	text-decoration: none;
 	text-transform:uppercase;
-	font-family:'helvetica_neueregular', sans-serif; 
+	font-family:'Helvetica-Neue-Light-Ext', sans-serif; 
  	font-size:12px;	
-	line-height:12px;
+	line-height:17px;
     color: #000;
 	transform:scale(1.2,1); 
 	-webkit-transform:scale(1.2,1); 
