--- a/css/splash.css
+++ b/css/splash.css
@@ -257,6 +257,7 @@ p {
 	text-align: center !important;
 	background-color: rgb(255,255,255,0) !important;
 	font-size: 100px !important;
+	line-height:100px!important;
 	border: 0px solid #ffd340!important;
 	color:#000!important;
 	transform:scale(0.8,1); 
@@ -267,6 +268,8 @@ p {
 	-webkit-text-stroke: 3px black;	 
     padding: 0!important;
 }
+
+
 
 .etaOCU.etaOCU.etaOCU.etaOCU.etaOCU.etaOCU:focus {
 	box-shadow: rgb(0 0 0) 0px 0px 0px!important;
