--- a/css/splash_small.css
+++ b/css/splash_small.css
@@ -130,6 +130,7 @@
 		-o-transform:scale(0.8,1);
 		-webkit-text-stroke: 2px black;	 
 		width: 400px;
+		line-height: 60px!important;
 	}
 	
 	
@@ -243,7 +244,7 @@
 	
 	
 	.jEnZGi.jEnZGi.jEnZGi.jEnZGi.jEnZGi.jEnZGi,.etaOCU.etaOCU.etaOCU.etaOCU.etaOCU.etaOCU, input::placeholder {
-		height:48px!important;
+		height:54px!important;
 		font-size: 52px !important;
 		transform:scale(0.8,1); 
 		-webkit-transform:scale(0.8,1); 
@@ -252,6 +253,7 @@
 		-o-transform:scale(0.8,1);
 		-webkit-text-stroke: 2.5px black;	 
 		width:350px;
+		line-height: 54px!important;
 	}
 	.form-inner {
 		width:350px;
