--- a/css/splash_small.css
+++ b/css/splash_small.css
@@ -120,7 +120,7 @@
 		-webkit-text-stroke: 1.2px black;	
 	}
 	
-	.etaOCU.etaOCU.etaOCU.etaOCU.etaOCU.etaOCU, input::placeholder, .jEnZGi.jEnZGi.jEnZGi.jEnZGi.jEnZGi.jEnZGi {
+	.ihwEzX.ihwEzX.ihwEzX.ihwEzX.ihwEzX.ihwEzX, input::placeholder, .ieXDZx.ieXDZx.ieXDZx.ieXDZx.ieXDZx.ieXDZx {
 		height:70px!important;
 		font-size: 60px !important;
 		transform:scale(0.8,1); 
@@ -243,7 +243,7 @@
 	} 
 	
 	
-	.jEnZGi.jEnZGi.jEnZGi.jEnZGi.jEnZGi.jEnZGi,.etaOCU.etaOCU.etaOCU.etaOCU.etaOCU.etaOCU, input::placeholder {
+	.ieXDZx.ieXDZx.ieXDZx.ieXDZx.ieXDZx.ieXDZx,.ihwEzX.ihwEzX.ihwEzX.ihwEzX.ihwEzX.ihwEzX, input::placeholder {
 		height:54px!important;
 		font-size: 52px !important;
 		transform:scale(0.8,1); 
@@ -267,7 +267,7 @@
 		width: 113px;
 	} 
 	
-	.jEnZGi.jEnZGi.jEnZGi.jEnZGi.jEnZGi.jEnZGi,.etaOCU.etaOCU.etaOCU.etaOCU.etaOCU.etaOCU, input::placeholder {
+	.ieXDZx.ieXDZx.ieXDZx.ieXDZx.ieXDZx.ieXDZx,.ihwEzX.ihwEzX.ihwEzX.ihwEzX.ihwEzX.ihwEzX, input::placeholder {
 		height:52px!important;
 		font-size: 44px !important;
 		transform:scale(0.8,1); 
