--- a/css/splash.css
+++ b/css/splash.css
@@ -356,13 +356,13 @@ p {
 }
 
 /*Offline*/
-.kdmtMJ.kdmtMJ {
+.iLauD.iLauD {
 	background: rgb(255, 255, 255, 0)!important;
 	    height: 30px;
 }
 
 /*Loader*/ 
-.cYkHUu.cYkHUu.cYkHUu.cYkHUu.cYkHUu.cYkHUu{
+.bSMlxZ.bSMlxZ.bSMlxZ.bSMlxZ.bSMlxZ.bSMlxZ {
 		background: rgb(255, 255, 255, 0)!important;
 		color: rgb(255, 255, 255, 0)!important;
 		font-size:0px!important;
