--- a/css/splash.css
+++ b/css/splash.css
@@ -317,12 +317,13 @@ p {
     height: 6px;
     width: 50px;
 	    font-size: 0px!important;
-	text-align: center;
+	text-align: center!important;
 }
 
-.kHXJYP.kHXJYP {
+.cxWQXf.cxWQXf {
 	margin: 0 auto;
 }
+
 
 
 /*Thank you Message*/
