--- a/css/splash_small.css
+++ b/css/splash_small.css
@@ -108,7 +108,7 @@
 		-webkit-text-stroke: 1.2px black;	
 	}
 	
-	.kzkVSS.kzkVSS.kzkVSS.kzkVSS.kzkVSS.kzkVSS .ql-container p, .kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1 .ql-editor span { 
+	.dUoLAQ.dUoLAQ.dUoLAQ.dUoLAQ.dUoLAQ.dUoLAQ.dUoLAQ.dUoLAQ .ql-container p, .kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1 .ql-editor span { 
 	  	font-size:10px!important;	
 		line-height:15px;
 		transform:scale(1.2,1); 
@@ -120,7 +120,7 @@
 		-webkit-text-stroke: 1.2px black;	
 	}
 	
-	.ihwEzX.ihwEzX.ihwEzX.ihwEzX.ihwEzX.ihwEzX, input::placeholder, .ieXDZx.ieXDZx.ieXDZx.ieXDZx.ieXDZx.ieXDZx {
+	.ikHPKM.ikHPKM.ikHPKM.ikHPKM.ikHPKM.ikHPKM, input::placeholder, .fhmQhu.fhmQhu.fhmQhu.fhmQhu.fhmQhu.fhmQhu {
 		height:70px!important;
 		font-size: 60px !important;
 		transform:scale(0.8,1); 
@@ -136,6 +136,10 @@
 	
 	.hEMewN.hEMewN {
 		padding:0!important;
+	}
+	
+	.itrmhl.itrmhl {
+				padding:10px 0px !important;
 	}
 	
 	.container-about {
@@ -243,7 +247,7 @@
 	} 
 	
 	
-	.ieXDZx.ieXDZx.ieXDZx.ieXDZx.ieXDZx.ieXDZx,.ihwEzX.ihwEzX.ihwEzX.ihwEzX.ihwEzX.ihwEzX, input::placeholder {
+	.fhmQhu.fhmQhu.fhmQhu.fhmQhu.fhmQhu.fhmQhu,.ikHPKM.ikHPKM.ikHPKM.ikHPKM.ikHPKM.ikHPKM, input::placeholder {
 		height:54px!important;
 		font-size: 52px !important;
 		transform:scale(0.8,1); 
@@ -267,7 +271,7 @@
 		width: 113px;
 	} 
 	
-	.ieXDZx.ieXDZx.ieXDZx.ieXDZx.ieXDZx.ieXDZx,.ihwEzX.ihwEzX.ihwEzX.ihwEzX.ihwEzX.ihwEzX, input::placeholder {
+	.fhmQhu.fhmQhu.fhmQhu.fhmQhu.fhmQhu.fhmQhu,.ikHPKM.ikHPKM.ikHPKM.ikHPKM.ikHPKM.ikHPKM, input::placeholder {
 		height:52px!important;
 		font-size: 44px !important;
 		transform:scale(0.8,1); 
